--- a/src/main/resources/assets/midnight/lang/en_us.json
+++ b/src/main/resources/assets/midnight/lang/en_us.json
@@ -298,7 +298,7 @@
   "item.midnight.bladeshroom_cap": "Bladeshroom Cap",
   "item.midnight.bladeshroom_spores": "Bladeshroom Spores",
   
-  "item.midnight.deceitful_snapper_bucket": "Deceitful Snapper Bucket",
+  "item.midnight.deceitful_snapper_bucket": "Bucket of Deceitful Snapper",
   
   "_comment": "Spawn Eggs",
   
