--- a/src/main/resources/assets/midnight/lang/en_us.json
+++ b/src/main/resources/assets/midnight/lang/en_us.json
@@ -22,15 +22,21 @@
   "block.midnight.shadowroot_stripped_log": "Stripped Shadowroot Log",
   "block.midnight.shadowroot_planks": "Shadowroot Planks",
   "block.midnight.shadowroot_leaves": "Shadowroot Leaves",
+  "block.midnight.shadowroot_wood": "Shadowroot Wood",
+  "block.midnight.shadowroot_stripped_wood": "Stripped Shadowroot Wood",
 
   "block.midnight.dead_wood_log": "Dead Wood Log",
   "block.midnight.dead_wood_stripped_log": "Stripped Dead Wood Log",
   "block.midnight.dead_wood_planks": "Dead Wood Planks",
+  "block.midnight.dead_wood": "Dead Wood",
+  "block.midnight.dead_wood_stripped": "Stripped Dead Wood",
 
   "block.midnight.dark_willow_log": "Dark Willow Log",
   "block.midnight.dark_willow_stripped_log": "Stripped Dark Willow Log",
   "block.midnight.dark_willow_planks": "Dark Willow Planks",
   "block.midnight.dark_willow_leaves": "Dark Willow Leaves",
+  "block.midnight.dark_willow_wood": "Dark Willow Wood",
+  "block.midnight.dark_willow_stripped_wood": "Stripped Dark Willow Wood",
 
   "block.midnight.nightstone_bricks": "Nightstone Bricks",
   "block.midnight.chiseled_nightstone_bricks": "Chiseled Nightstone Bricks",
