Hanging dark willow leaves block, tweak lumen & suavis generation

--- a/src/main/resources/assets/midnight/lang/en_us.json
+++ b/src/main/resources/assets/midnight/lang/en_us.json
@@ -35,6 +35,7 @@
   "block.midnight.dark_willow_stripped_log": "Stripped Dark Willow Log",
   "block.midnight.dark_willow_planks": "Dark Willow Planks",
   "block.midnight.dark_willow_leaves": "Dark Willow Leaves",
+  "block.midnight.hanging_dark_willow_leaves": "Hanging Dark Willow Leaves",
   "block.midnight.dark_willow_wood": "Dark Willow Wood",
   "block.midnight.dark_willow_stripped_wood": "Stripped Dark Willow Wood",
 
