--- a/src/main/resources/assets/midnight/lang/en_us.json
+++ b/src/main/resources/assets/midnight/lang/en_us.json
@@ -129,6 +129,9 @@
   "block.midnight.bogshroom_hat": "Bogshroom Cap",
   "block.midnight.bogshroom_shelf": "Bogshroom Shelf",
 
+  "block.midnight.mistshroom": "Mistshroom",
+  "block.midnight.double_mistshroom": "Tall Mistshroom",
+
   "block.midnight.glob_fungus": "Glob Fungus",
   "block.midnight.glob_fungus_stem": "Glob Fungus Stem",
   "block.midnight.glob_fungus_hat": "Glob Fungus Cap",
