--- a/src/main/resources/assets/midnight/lang/en_us.json
+++ b/src/main/resources/assets/midnight/lang/en_us.json
@@ -171,7 +171,7 @@
   "block.midnight.dewshroom_ladder": "Dewshroom Ladder",
   "block.midnight.viridshroom_ladder": "Viridshroom Ladder",
   "block.midnight.nightshroom_ladder": "Nightshroom Ladder",
-  "block.midnight.nightshroom_ladder": "Bogshroom Ladder",
+  "block.midnight.bogshroom_ladder": "Bogshroom Ladder",
 
   "block.midnight.shadowroot_slab": "Shadowroot Slab",
   "block.midnight.shadowroot_double_slab": "Shadowroot Double Slab",
