wood blocks are now rotatable, added glob fungus stalk and thatch

--- a/src/main/resources/assets/midnight/lang/en_us.json
+++ b/src/main/resources/assets/midnight/lang/en_us.json
@@ -139,6 +139,8 @@
   "block.midnight.glob_fungus": "Glob Fungus",
   "block.midnight.glob_fungus_stem": "Glob Fungus Stem",
   "block.midnight.glob_fungus_hat": "Glob Fungus Cap",
+  "block.midnight.glob_fungus_stalk": "Glob Fungus Stalk",
+  "block.midnight.glob_fungus_thatch": "Glob Fungus Thatch",
 
   "block.midnight.bladeshroom": "Bladeshroom",
 
