--- a/src/main/resources/assets/midnight/lang/en_us.json
+++ b/src/main/resources/assets/midnight/lang/en_us.json
@@ -9,6 +9,8 @@
 
   "_comment": "Blocks",
 
+  "block.midnight.midnight_bedrock": "Midnight Bedrock",
+
   "block.midnight.nightstone": "Nightstone",
   "block.midnight.grass_block": "Midnight Grass Block",
   "block.midnight.coarse_dirt": "Midnight Coarse Dirt",
