updated en_us and ja_jp

--- a/src/main/resources/assets/midnight/lang/en_us.json
+++ b/src/main/resources/assets/midnight/lang/en_us.json
@@ -433,7 +433,7 @@
   "item.midnight.tenebrum_chestplate": "Tenebrum Chestplate",
   "item.midnight.tenebrum_leggings": "Tenebrum Leggings",
   "item.midnight.tenebrum_boots": "Tenebrum Boots",
-  "item.midnight.rockshroom_shear": "Rockshroom Shear",
+  "item.midnight.rockshroom_shears": "Rockshroom Shears",
   "item.midnight.rockshroom_bucket": "Rockshroom Bucket",
 
   "_comment": "Fluids",
