Implemented new config screen

--- a/src/main/resources/assets/midnight/lang/en_pt.json
+++ b/src/main/resources/assets/midnight/lang/en_pt.json
@@ -59,26 +59,18 @@
 
   "block.midnight.shadowroot_sapling": "Shadaroot Meager Shrub",
   "block.midnight.dark_willow_sapling": "Dark Willa' Meager Shrub",
-
   "block.midnight.bloomcrystal": "Bloomin' Shiny",
   "block.midnight.bloomcrystal_rock": "Rock o' Bloomin' Shiny",
-
   "block.midnight.rouxe": "Crimson Shiny",
   "block.midnight.rouxe_rock": "Rock o' Crimson Shiny",
-
   "block.midnight.archaic_glass": "Shiny Porthole",
-
   "block.midnight.miasma_surface": "Land o' Strange Rum",
-  "block.midnight.misama": "Strange Rum",
-
+  "block.midnight.miasma": "Strange Rum",
   "block.midnight.crystal_flower": "Shinin' Shrub",
-
   "block.midnight.dewshroom": "Dewshroom",
   "block.midnight.double_dewshroom": "Towerin' Dewshroom",
-
   "block.midnight.nightshroom": "Nightshroom",
   "block.midnight.double_nightshroom": "Towerin' Nightshroom",
-
   "block.midnight.viridshroom": "Viridshroom",
   "block.midnight.double_viridshroom": "Towerin' Viridshroom",
 
