Config interfaces now finally work!

--- a/src/main/resources/assets/midnight/lang/en_us.json
+++ b/src/main/resources/assets/midnight/lang/en_us.json
@@ -462,62 +462,87 @@
   "entity.midnight.skulk": "Skulk",
   "entity.midnight.thrown_geode": "Thrown Geode",
   "entity.midnight.shade_squirrel": "Shade Squirrel",
+
   "_comment": "Config",
-  "config.midnight.title": "Midnight Config",
+
   "config.midnight.title.client": "Midnight Config - Client",
-  "config.midnight.title.general": "Midnight Config - General",
-  "config_cat.midnight.general": "General",
-  "config_cat.midnight.general.tooltip": "All the options that can only be set on the server.",
-  "config_cat.midnight.client": "Client",
-  "config_cat.midnight.client.tooltip": "All the options that can be modified by players on server.",
-  "config.midnight.midnight_dimension_id": "Midnight Dimension ID",
-  "config.midnight.midnight_dimension_id.tooltip": "The ID to be used for the Midnight Dimension.",
-  "config.midnight.rift_shaders": "Rift Shaders",
-  "config.midnight.rift_shaders.tooltip": "If true, rifts will be rendered with custom shaders for standard effects. If false, a simpler (motionless) texture will be rendered.",
+  "config.midnight.title.compat": "Midnight Config - Compatibility",
+  "config.midnight.title.server_logic": "Midnight Config - Server Logic",
+  "config.midnight.title.worldgen": "Midnight Config - World Generation",
+
+  "config.midnight.header.graphical": "Graphics",
+  "config.midnight.header.sound": "Sounds",
+  "config.midnight.header.rifters": "Rifters",
+  "config.midnight.header.rifts": "Rifts",
+  "config.midnight.header.lightning": "Lightning",
+  "config.midnight.header.general": "General",
+
+  "config.midnight.category.client": "Client Settings",
+  "config.midnight.category.client.tooltip": "Settings that apply only on the client and do not do anything server side.",
+  "config.midnight.category.compat": "Compatibility Settings",
+  "config.midnight.category.compat.tooltip": "Settings on how the Midnight mod operates with other mods and vanilla.",
+  "config.midnight.category.server": "Server Logic Settings",
+  "config.midnight.category.server.tooltip": "Settings around logic on the server. Can be edited per world. Only enabled when playing in a world.",
+
+
+  "config.midnight.hide_vignette_effect": "Hide Vignette Filter",
+  "config.midnight.hide_vignette_effect.tooltip": "Hide the vignette effect in darker places of the Midnight.",
+  "config.midnight.ambient_spore_particles": "Spore Particles",
+  "config.midnight.ambient_spore_particles.tooltip": "Determines whether ambient spore particles spawn.",
+  "config.midnight.ambient_volume": "Ambience Volume",
+  "config.midnight.ambient_volume.tooltip": "The volume of Midnight ambience sounds.",
+  "config.midnight.echo_volume": "Echo Effect",
+  "config.midnight.echo_volume.tooltip": "The volume of Midnight echo effects.",
+
+  "config.midnight.rift_biomes": "Rift Biomes",
+  "config.midnight.rift_biomes.tooltip": "Selects in which biomes rifts may spawn.",
+  "config.midnight.rift_dimensions": "Rift Dimensions",
+  "config.midnight.rift_dimensions.tooltip": "Selects in which dimensions rifts may spawn.",
+  "config.midnight.capturable_entities": "Capturable Entities",
+  "config.midnight.capturable_entities.tooltip": "Selects which entities may be captured by rifters. Players and animals are captured by default.",
+  "config.midnight.not_capturable_animals": "Not Capturable Animals",
+  "config.midnight.not_capturable_animals.tooltip": "Selects which animals cannot be captured by rifters. Players are always captured.",
 
   "config.midnight.bladeshroom_damage_chance": "Bladeshroom Damage Chance",
-  "config.midnight.bladeshroom_damage_chance.tooltip": "The chance to take a small amount of damage when picking a bladeshroom cap as a percentage. If 0, this is disabled.",
+  "config.midnight.bladeshroom_damage_chance.tooltip": "Chance to take a small amount of damage when cutting off a bladeshroom cap.",
+  "config.midnight.can_respawn_in_midnight": "Midnight Respawning",
+  "config.midnight.can_respawn_in_midnight.tooltip": "Sets whether players respawn in the Midnight when they die there.",
+  "config.midnight.hunters_attack_tamed_skulks": "Hunters Eat Tamed Skulks",
+  "config.midnight.hunters_attack_tamed_skulks.tooltip": "Sets whether hunters attack tamed skulks.",
+  "config.midnight.rifts_from_dark_pearls": "Dark Pearl Rifts",
+  "config.midnight.rifts_from_dark_pearls.tooltip": "Sets whether dark pearls spawn rift heaps upon right click.",
+  "config.midnight.rifts_open_at_daytime": "Rifts At Daytime",
+  "config.midnight.rifts_open_at_daytime.tooltip": "Sets whether rifts are always open or only at nighttime.",
+  "config.midnight.allow_lightning_damage": "Lighting Damage",
+  "config.midnight.allow_lightning_damage.tooltip": "Sets whether Midnight lightnings burn blocks and damage entities.",
+  "config.midnight.random_lightnings": "Random Lightnings",
+  "config.midnight.random_lightnings.tooltip": "Sets whether random lightning effects occur in the Midnight.",
+  "config.midnight.rifter_spawn_rarity": "Rift Spawning Rarity",
+  "config.midnight.rifter_spawn_rarity.tooltip": "Sets the rarity of rifters spawning from rifts. When 0, no rifters spawn at all.",
+  "config.midnight.max_rifters_by_rift": "Max Rift Rifters",
+  "config.midnight.max_rifters_by_rift.tooltip": "Sets the maximum amount of rifters that spawn near a rift.",
+  "config.midnight.allow_rifter_teleport": "Allow Rifter Teleport",
+  "config.midnight.allow_rifter_teleport.tooltip": "Allow rifters to teleport to players when they aren't being looked at.",
+  "config.midnight.rifter_capture_tamed_animal": "Capture Tamed Animals",
+  "config.midnight.rifter_capture_tamed_animal.tooltip": "Allow rifters to capture tamed animals.",
+  "config.midnight.rifter_capture_named_animal": "Capture Named Animals",
+  "config.midnight.rifter_capture_named_animal.tooltip": "Allow rifters to capture nametagged animals.",
 
-  "config.midnight.can_respawn_in_midnight": "Allow players to respawn in Midnight",
-  "config.midnight.can_respawn_in_midnight.tooltip": "If true, players will respawn in Midnight after dying in the dimension.",
 
-  "config.midnight.hide_vignette_effect": "Hide the vignette effect",
-  "config.midnight.hide_vignette_effect.tooltip": "Hides the vignette effect in the darker areas of Midnight.",
 
-  "config.midnight.allow_lightning_damage": "Allow lightning damage",
-  "config.midnight.allow_lightning_damage.tooltip": "Allows the lightning in Midnight to burn blocks and do damage to entities.",
-
-  "config.midnight.rift_spawn_rarity": "Rarity of rifts",
-  "config.midnight.rift_spawn_rarity.tooltip": "The rarity that a rift appears. Larger numbers increase rarity. If 0, rifts don't spawn.",
-
-  "config.midnight.rifter_spawn_rarity": "Rarity of rifters",
-  "config.midnight.rifter_spawn_rarity.tooltip": "The rarity that rifts spawn rifters. Larger numbers increase rarity. If 0, rifters don't spawn.",
-
-  "config.midnight.max_rifter_by_rift": "Maximum rifters from rifts",
-  "config.midnight.max_rifter_by_rift.tooltip": "The maximum amount of rifters that spawn from a rift.",
-
-  "config.midnight.allow_rifter_teleport": "Rifter teleportation",
-  "config.midnight.allow_rifter_teleport.tooltip": "Allows rifters to teleport to players when they aren't being looked at.",
-
-  "config.midnight.monster_spawn_rate": "Monster spawn rate",
-  "config.midnight.monster_spawn_rate.tooltip": "Spawn rate of entities of the 'monster' type in midnight (eg. Rifter, Hunter).",
-
-  "config.midnight.rifter_capture_tamed_animal": "Capture tamed animals",
-  "config.midnight.rifter_capture_tamed_animal.tooltip": "Allows rifters to capture tamed entities and drag them into rifts.",
-  "config.midnight.capturable_entities": "Capturable entities",
-  "config.midnight.capturable_entities.tooltip": "Mobs on this whitelist can be captured by rifters, players and animals are already captured by default. Format is mod id:name of creature, just use the modid to whitelist everything from it.",
-  "config.midnight.not_capturable_animals": "Not capturable entities",
-  "config.midnight.not_capturable_animals.tooltip": "Mobs on this blacklist cannot be captured by rifters. Format is mod id:name of creature, just use the mod id to blacklist everything from it.",
-  "config.midnight.foreign_flowers_from_bonemeal": "Foreign flowers from bonemeal",
-  "config.midnight.foreign_flowers_from_bonemeal.tooltip": "Allows the flowers of others mods to appear with bonemeal in Midnight.",
   "config.midnight.format.number_basic": "%s",
   "config.midnight.format.number_percentage": "%s%%",
   "config.midnight.format.always": "Always",
   "config.midnight.format.never": "Never",
   "config.midnight.format.entries": "%s entries",
+
+  "_comment": "Status",
+
   "status.midnight.rift_nearby": "You may not rest now, there is an evil presence nearby",
   "status.midnight.snapped": "The fish snapped at you",
+
   "_comment": "Biomes",
+
   "biome.midnight.vigilant_forest": "Vigilant Forest",
   "biome.midnight.black_ridge": "Black Ridge",
   "biome.midnight.deceitful_bog": "Deceitful Bog",
